# florrview

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
data/: florrview.desktop
src/: main.rs
src/florr/: core.rs  data.rs  extract.rs  mod.rs
