[package]
name = "florrview"
version = "1.0.1"
edition = "2024"
description = "An simple client.wasm viewer"
license = "MIT"
authors = ["nardzy"]
build = "build.rs"

[dependencies]
dirs = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui-file-dialog = "0.12.0"
egui_ltreeview = "0.6.1"
rfd = "0.17.2"
wasmtime = { version = "42.0.1", features = ["winch"] }
zip = "8.2.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]


[package.metadata.deb]
copyright = "© nardzy"
license-file = ["LICENSE", "5"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/florrview", "usr/bin/", "755"],
    ["data/florrview.png", "usr/share/pixmaps/", "644"],
    ["data/florrview.desktop", "usr/share/applications/", "644"]
]

# binbinbinbinbinbinbinbinbin chik aaaaaaaaaaaaaaaaaaaaaaaaaaaaa a 19 (~=~~~~~~)
[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
debug = false